--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,48 +1,85 @@
-@media screen and (max-width: 992px) {
-    
-    .nav-bar .menu{
-        position: absolute;
-        padding:  3rem 1rem;
-        top: 0px;
-        left: 0;
-        width: 100%;
-        /* height: calc(100vh - 100px); */
-        background-color: var(--green-color);
-        display: flex;
-        flex-direction: column;
-        justify-content: space-evenly;
-        z-index: 999;
-        gap: .8rem;
-        align-items:stretch;
-        transform: translateY(-120%);
-        transition: all 1s;
+@media screen and (max-width: 1065px) {
+    /* nav-bar */
+  .requst-btn {
+    display: none;
+  }
+}
 
-    }
-    .requst-btn button{
-        margin-left: 0;
-        width: 100%;
-    }
-    .open-menu i{
-        font-size: 2rem;
-    }
-    .close-menu{
-        position: absolute;
-        top: 10px;
-        right: 10px;
-        font-size: 1rem;
-        padding: 3px 13px ;
-        cursor: pointer;
-        text-align: center;
-        border-radius: 5px;
-        background-color: var(--black-color);
-        color: var(--grey-color);
-    }
+@media screen and (max-width: 945px) {
+    /* nav-bar */
+  .nav-bar .menu {
+    position: absolute;
+    padding: 3rem 1rem;
+    top: 0px;
+    left: 0;
+    width: 100%;
+    /* height: calc(100vh - 100px); */
+    background-color: var(--green-color);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    z-index: 999;
+    gap: 0.8rem;
+    align-items: stretch;
+    transform: translateY(-120%);
+    transition: all 1s;
+  }
+  .requst-btn {
+    display: block;
+  }
+  .requst-btn button {
+    margin-left: 0;
+    width: 100%;
+  }
+  .open-menu i {
+    font-size: 2rem;
+  }
+  .close-menu {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 1rem;
+    padding: 3px 13px;
+    cursor: pointer;
+    text-align: center;
+    border-radius: 5px;
+    background-color: var(--black-color);
+    color: var(--grey-color);
+  }
 
-    .nav-bar .open-menu, .nav-bar .close-menu{
-        display: block;
-    }
-    #check:checked ~ .menu{
-        transform: translateX(0);
-    }
-    
+  .nav-bar .open-menu,
+  .nav-bar .close-menu {
+    display: block;
+  }
+  #check:checked ~ .menu {
+    transform: translateX(0);
+  }
+
+  /* hero section */
+
+  .hero-title {
+    font-size: 1.7rem;
+  }
+  .hero-p {
+    font-size: 0.7rem;
+  }
+  
+}
+
+@media screen and (max-width: 768px) {
+  /* hero section */
+  .hero-section {
+    flex-direction: column;
+    gap: 1rem;
+  }
+  .hero-content,
+  .hero-img {
+    flex-basis: 100%;
+  }
+}
+@media screen and (max-width: 535px) {
+  /* hero section */
+  .hero-btn {
+    align-self: stretch;
+  }
 }
