--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,12 +1,29 @@
+@media screen and (max-width: 1250px) {
+  /* services section */
+  .service-card {
+    padding: 50px 25px;
+  }
+  .service-card-title h3 {
+    font-size: 1.2rem;
+  }
+}
 @media screen and (max-width: 1065px) {
-    /* nav-bar */
+  /* nav-bar */
   .requst-btn {
     display: none;
   }
+  /* hero section */
+  .hero-content {
+    flex-basis: 50%;
+  }
+  /* services section */
+  .service-content {
+    gap: 1rem;
+  }
 }
 
-@media screen and (max-width: 945px) {
-    /* nav-bar */
+@media screen and (max-width: 955px) {
+  /* nav-bar */
   .nav-bar .menu {
     position: absolute;
     padding: 3rem 1rem;
@@ -56,14 +73,33 @@
   }
 
   /* hero section */
-
   .hero-title {
-    font-size: 1.7rem;
+    font-size: 2.4rem;
   }
   .hero-p {
-    font-size: 0.7rem;
+    font-size: 0.9rem;
   }
-  
+  /* services section */
+  .service-card {
+    flex-direction: column;
+    position: relative;
+    gap: 1rem;
+  }
+  .service-card-title h3 {
+    font-size: 1.4rem;
+  }
+  .service-card-img {
+    align-self: flex-end;
+    margin-bottom: 1rem;
+  }
+  .learn-more button {
+    display: none;
+  }
+  .learn-more i {
+    position: absolute;
+    bottom: 20px;
+    left: 25px;
+  }
 }
 
 @media screen and (max-width: 768px) {
@@ -72,14 +108,77 @@
     flex-direction: column;
     gap: 1rem;
   }
+  .hero-title {
+    font-size: 3rem;
+  }
   .hero-content,
   .hero-img {
     flex-basis: 100%;
   }
+  .illustration {
+    display: block;
+  }
+  .illustration-1 {
+    display: none;
+  }
+  /* services section */
+  .service-header {
+    flex-direction: column;
+    align-items: center;
+    text-align: justify;
+  }
+  .service-title {
+    font-size: 2rem;
+  }
+  .service-p {
+    font-size: 0.8rem;
+    text-align: center;
+  }
+  .service-content {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .service-card {
+    flex-direction: row;
+  }
+  .learn-more button {
+    display: block;
+  }
+  .learn-more i {
+    position: static;
+  }
 }
 @media screen and (max-width: 535px) {
+  .wrapper {
+    padding: 0.5rem 1rem;
+  }
+  .nav-bar {
+    padding: 0.7rem 1rem;
+  }
   /* hero section */
   .hero-btn {
     align-self: stretch;
+  }
+  .hero-title {
+    font-size: 2.29rem;
+  }
+  /* services section */
+
+  .service-card {
+    flex-direction: column;
+  }
+  .service-card-title h3 {
+    font-size: 1.4rem;
+  }
+  .service-card-img {
+    align-self: flex-end;
+    margin-bottom: 1rem;
+  }
+  .learn-more button {
+    display: none;
+  }
+  .learn-more i {
+    position: absolute;
+    bottom: 20px;
+    left: 25px;
   }
 }
