--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@ body {
 .requst-btn button {
   margin-left: 0.5rem;
   display: block;
-  border: 1px solid var(--dark-color);
+  border: 2px solid var(--dark-color);
   outline: none;
   background: transparent;
   padding: 0.7rem 1.3rem;
@@ -70,7 +70,7 @@ body {
 }
 .nav-bar ul li:hover a,
 .requst-btn:hover button,
-.hero-btn {
+.hero-btn,.proposal-btn {
   background: #000;
   color: var(--grey-color);
 }
@@ -111,7 +111,8 @@ input[type="checkbox"] {
   font-weight: 400;
   line-height: 28px;
 }
-.hero-btn {
+.hero-btn,
+.proposal-btn {
   display: block;
   border: 2px solid var(--black-color);
   outline: none;
@@ -123,7 +124,9 @@ input[type="checkbox"] {
   font-weight: 400;
   line-height: 28px;
 }
-.hero-btn:hover {
+.hero-btn:hover,
+.proposal-btn:hover,
+.requst-btn:hover button {
   background-color: var(--green-color);
   color: var(--dark-color);
 }
@@ -248,6 +251,7 @@ input[type="checkbox"] {
   transform: rotate(44deg);
   background-color: var(--black-color);
   color: var(--green-color);
+  cursor: pointer;
 }
 .learn-more button {
   border: none;
@@ -281,4 +285,46 @@ input[type="checkbox"] {
 .s-card-3 .learn-more button,
 .s-card-6 .learn-more button {
   color: var(--white-color);
+}
+
+/* proposal-section style */
+.proposal-section {
+  display: flex;
+  background-color: var(--grey-color);
+  position: relative;
+  border-radius: 45px;
+}
+.proposal-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+  gap: 2rem;
+  flex-basis: 55%;
+  padding: 2.6rem 3rem;
+}
+.proposal-title {
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+.proposal-p {
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+.proposal-img {
+  flex-basis: auto;
+  height: 100%;
+  position: absolute;
+  right: 0;
+  bottom: 1rem;
+  transform: translate(0, .1%);
+}
+.proposal-img img {
+  display: block;
+  width: 100%;
+  height: auto;
 }
