--- a/css/responsive.css
+++ b/css/responsive.css
@@ -166,6 +166,26 @@
     padding-block: 1rem;
     border-bottom: 2px solid var(--green-color);
   }
+  /* our working section  */
+  .wc-header-text h2 {
+    font-size: 30px;
+  }
+  .working-card-title {
+    font-size: 18px;
+  }
+  .working-card-p {
+    display: none;
+  }
+  .wc-text-1 {
+    border: none;
+  }
+  .wc-card-1 {
+    background-color: var(--grey-color);
+    padding: 2rem 1.2rem;
+  }
+  .working-card {
+    padding: 2rem 1.2rem;
+  }
 }
 @media screen and (max-width: 535px) {
   .wrapper {
@@ -212,11 +232,18 @@
     background-color: transparent;
   }
   .case-study-card {
-    padding: 2rem 1rem;
+    padding: 2rem 1.2rem;
     border-radius: 45px;
     background-color: var(--black-color);
     border: none;
   }
+  /* our working section */
+  /* .wc-header-text h2 {
+    font-size: 23px;
+  }
+  .working-card-title {
+    font-size: 14px;
+  } */
 }
 @media screen and (max-width: 425px) {
   /* proposal section */
@@ -226,5 +253,12 @@
   .proposal-btn {
     padding: 0.6rem 1rem;
     font-size: 0.9rem;
+  }
+  /*  */
+  .wc-header-text h2 {
+    font-size: 23px;
+  }
+  .working-card-title {
+    font-size: 14px;
   }
 }
