--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,3 +1,15 @@
+@media screen and (min-width: 1440px) {
+  footer {
+    max-width: 1440px;
+    margin: 0 auto;
+  }
+}
+@media screen and (max-width: 1440px) {
+  footer {
+    max-width: 1440px;
+    margin: 0 2rem;
+  }
+}
 @media screen and (max-width: 1250px) {
   /* services section */
   .service-card {
@@ -5,6 +17,10 @@
   }
   .service-card-title h3 {
     font-size: 1.2rem;
+  }
+  /* contact section */
+  .contact-content {
+    background-position: 70% 10%;
   }
 }
 @media only screen and (max-width: 1180px) and (min-width: 1070px) {
@@ -36,6 +52,29 @@
   /* team section */
   .team-content {
     grid-template-columns: repeat(2, 1fr);
+  }
+  /* contact section */
+  .contact-content {
+    background-image: none;
+  }
+  .contact-form {
+    width: 100%;
+  }
+  /* footer section style */
+  .footer-social-icons {
+    display: none;
+  }
+  .footer-contact {
+    flex-direction: column;
+    width: 100%;
+    align-items: center;
+    gap: 2rem;
+  }
+  .footer-subscribe {
+    width: 100%;
+  }
+  .footer-contact-info {
+    width: 100%;
   }
 }
 
@@ -124,6 +163,22 @@
   }
   .testimonials-card {
     width: 100%;
+  }
+  /* footer section style */
+  .footer-manu {
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+  }
+  .footer-contact-info {
+    align-items: center;
+    text-align: center;
+  }
+  .footer-contact > .footer-social-icons {
+    display: flex;
+  }
+  .footer-copyright {
+    gap: 1rem;
   }
 }
 
@@ -216,12 +271,30 @@
     font-size: 0.8rem;
   }
   /* contact section */
-  .contact-content{
+  .footer-manu {
+    gap: 3rem;
+  }
+  .contact-content {
     background-image: none;
     background-color: var(--grey-color);
   }
-  .contact-form{
+  .contact-form {
     width: 100%;
+  }
+  .footer-menu-list {
+    flex-direction: column;
+  }
+  .footer-contact-info {
+    align-items: center;
+    text-align: center;
+  }
+  .footer-subscribe {
+    flex-direction: column;
+    width: 100%;
+  }
+  .footer-copyright {
+    flex-direction: column;
+    text-align: center;
   }
 }
 @media screen and (max-width: 535px) {
@@ -286,7 +359,7 @@
     left: 14%;
   }
 }
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 429px) {
   /* proposal section */
   .proposal-content {
     padding: 2rem 1.2rem;
@@ -332,11 +405,20 @@
     margin-left: 0.4rem;
   }
   /* contact section */
-  .contact-content{
+  .contact-content {
     padding: 2rem 1.2rem;
   }
-  .rediobutton{
+  .rediobutton {
     flex-direction: column;
-    gap: .4rem;
+    gap: 0.4rem;
+  }
+  /* footer section */
+  .footer-section {
+    margin: 0;
+    border-radius: 0%;
+    padding: 2rem 1.2rem;
+  }
+  .footer-subscribe {
+    padding: 1rem 0.7rem;
   }
 }
