--- a/css/style.css
+++ b/css/style.css
@@ -73,8 +73,8 @@ body {
 .nav-bar ul li:hover a,
 .hero-btn,
 .proposal-btn,
-.team-btn ,
-.contact-btn{
+.team-btn,
+.contact-btn {
   background: #000;
   color: var(--grey-color);
 }
@@ -594,59 +594,212 @@ input[type="checkbox"] {
 .contact-section {
   margin-block: 100px;
 }
-.contact-content{
+.contact-content {
+  background-color: var(--grey-color);
   border-radius: 45px;
-  padding: 4rem 2rem;
+  padding: 8rem 2rem;
   background-image: url(../assets/images/contact-bg.png);
   background-repeat: no-repeat;
-  background-position: 61% 10%;
-  background-size:cover;
-  
+  background-position: -7.6rem -2rem;
+  background-size: cover;
 }
-input ,.contact-form > label , textarea{
+input,
+.contact-form > label,
+textarea {
   display: block;
   width: 100%;
 }
-.contact-form{
+.contact-form {
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  width: 50%;
+  width: 60%;
 }
-.rediobutton{
+.rediobutton {
   display: flex;
   justify-content: flex-start;
   gap: 1.6rem;
-  
 }
-.rediobutton label{
-font-size: 18px;
-font-style: normal;
-font-weight: 400;
-line-height: normal;
+.rediobutton label {
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
 }
-#radio1 , #radio{
- accent-color: var(--green-color);
-width: 20px;
-height: 20px;
+#radio1,
+#radio {
+  width: 20px;
+  height: 20px;
 }
-.say-hi,.get-qute{
+.say-hi,
+.get-qute {
   display: flex;
   align-items: center;
   gap: 1rem;
 }
 
-label{
-font-size: 16px;
-font-style: normal;
-font-weight: 400;
-line-height: 28px; 
+label {
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 28px;
 }
-#name,#email,#message{
+#name,
+#email,
+#message {
   border: 1px solid var(--black-color);
   padding: 1rem;
   border-radius: 14px;
 }
-#message{
+#message {
   resize: none;
+}
+/* footer section style */
+.footer-section {
+  margin-top: 100ppx;
+  background-color: var(--black-color);
+  color: var(--white-color);
+  padding: 4rem 2rem;
+  border-radius: 45px 45px 0px 0px;
+  /* margin: 0 2rem; */
+}
+
+.footer-manu {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.footer-menu-list {
+  display: flex;
+  gap: 2rem;
+  justify-content: center;
+  align-items: center;
+  list-style: none;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+.footer-menu-list > li > a {
+  color: #fff;
+  display: inline-block;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  text-decoration-line: none;
+}
+.footer-menu-list > li > a::after {
+  content: " ";
+  display: block;
+  width: 0;
+  height: 2px;
+  background-color: var(--white-color);
+  transition: 0.5s;
+}
+.footer-menu-list > li > a:hover::after {
+  width: 100%;
+}
+.footer-social-icons {
+  display: flex;
+  gap: 1rem;
+  justify-content: center;
+  align-items: center;
+}
+.footer-social-icons i {
+  color: var(--black-color);
+  background-color: var(--white-color);
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  font-size: 18px;
+  cursor: pointer;
+  padding: 0.5rem 0.7rem;
+  display: inline-block;
+  object-fit: cover;
+}
+.footer-contact {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-block: 2rem;
+  border-bottom: 1px solid var(--white-color);
+  padding-bottom: 2rem;
+}
+.footer-title {
+  width: fit-content;
+  color: var(--black-color);
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  border-radius: 7px;
+  background: var(--green-color);
+  padding: 0 7px;
+  gap: 1rem;
+}
+.footer-contact-info {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.footer-contact-info p,
+.footer-address p {
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+.footer-subscribe {
+  display: flex;
+  gap: 1rem;
+  flex-basis: 60%;
+  border-radius: 14px;
+  background: #292a32;
+  padding: 4rem 1.5rem;
+}
+.footer-subscribe > input,
+.footer-subscribe > button {
+  width: 100%;
+  padding: 1rem;
+  border-radius: 14px;
+}
+.footer-subscribe > input {
+  border: 1px solid var(--white-color);
+  outline: none;
+  color: var(--white-color);
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 28px;
+  background-color: transparent;
+}
+.footer-subscribe > input::placeholder {
+  color: var(--grey-color);
+}
+.footer-subscribe > button {
+  background: var(--green-color);
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 28px;
+  cursor: pointer;
+  border: none;
+}
+
+.footer-copyright {
+  display: flex;
+  gap: 2rem;
+}
+
+.footer-copyright p > a {
+  color: var(--white-color);
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 28px; /* 155.556% */
+  text-decoration-line: underline;
+}
+.footer-contact > .footer-social-icons{
+  display: none;
 }
