--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@
   padding: 0;
   box-sizing: border-box;
   scroll-behavior: smooth;
+  transition: all 0.6s;
 }
 body {
   font-family: "Space Grotesk", sans-serif;
@@ -661,7 +662,6 @@ label {
   color: var(--white-color);
   padding: 4rem 2rem;
   border-radius: 45px 45px 0px 0px;
-  /* margin: 0 2rem; */
 }
 
 .footer-manu {
